[package]
name = "pgtemp"
version = "0.5.0"
edition = "2021"
authors = ["Harry Stern <harry@harrystern.net>",]
description = "Start local postgres servers for testing without Docker"
repository = "https://github.com/boustrophedon/pgtemp"
license = "MIT"

[features]
cli = ["dep:clap"]

[dependencies]
tempfile = "^3"
libc = "^0.2"
url = "^2.5"
tokio = { version = "^1", features = ["full"] }
clap = { version = "^4.4", features = ["derive"], optional = true }

[dev-dependencies]
# testing and examples
sqlx = { version = "^0.7", features = [ "runtime-tokio", "postgres", "migrate" ] }
# examples
axum = { version = "^0.7", features = ["macros"] }
reqwest = "^0.11"
diesel = { version = "^2.1", features = ["postgres", "r2d2", ] }
diesel_migrations = "^2.1"

[[bin]]
name = "pgtemp"
test = false
bench = false
required-features = ["cli"]
